--- a/fluentd/fluent.conf
+++ b/fluentd/fluent.conf
@@ -7,20 +7,28 @@
   format nginx # Do you have a custom format? You can write your own regex.
 </source>
 
+# <match nginx.access>
+#   @type s3
+#   append true
+#   <format>
+#     @type json
+#   </format>
+#   store_as json
+#   path /logs #(optional; default="")
+#   aws_key_id "#{ENV['AWS_ACCESS_KEY_ID']}" #(required)
+#   aws_sec_key "#{ENV['AWS_SECRET_KEY']}" #(required)
+#   s3_bucket weblogs #(required)
+#   s3_region ap-southeast-1
+#   s3_endpoint http://172.20.0.11:9000 #(required; ex: s3-us-west-1.amazonaws.com)
+#   auto_create_bucket false #(optional; default=true)
+#   check_apikey_on_start true #(optional; default=true)
+# </match>
+
 <match nginx.access>
-  @type s3
-  append true
+  @type kafka
+  brokers 172.20.0.12:9092 # kafka ip and port
+  default_topic honeypot-traffic
   <format>
     @type json
   </format>
-  store_as json
-  path /logs #(optional; default="")
-  aws_key_id "#{ENV['AWS_ACCESS_KEY_ID']}" #(required)
-  aws_sec_key "#{ENV['AWS_SECRET_KEY']}" #(required)
-  s3_bucket weblogs #(required)
-  s3_region ap-southeast-1
-  s3_endpoint http://172.20.0.11:9000 #(required; ex: s3-us-west-1.amazonaws.com)
-  auto_create_bucket false #(optional; default=true)
-  check_apikey_on_start true #(optional; default=true)
 </match>
-
