--- a/fluentd/fluent.conf
+++ b/fluentd/fluent.conf
@@ -26,7 +26,7 @@
 
 <match nginx.access>
   @type kafka
-  brokers 172.20.0.12:9092 # kafka ip and port
+  brokers kafka:9092 # kafka ip and port
   default_topic honeypot-traffic
   <format>
     @type json
